tests/myTests/parserTests/fail/test6.c
#include "Test[6] -> Expected: Fail"
#include "Tests: struct decl after var decl"

struct my c;
struct my {
    struct yours b;
};